[tool.poetry]
name = "llm-talk"
version = "0.1.0"
description = ""
authors = ["jaketothepast <windlejacob12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.37.2"
jupyter = "^1.0.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"
openai = "^1.12.0"
tqdm = "^4.66.2"
numpy = "^1.26.4"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
